--- a/less/about.less
+++ b/less/about.less
@@ -1,4 +1,3 @@
-@tablet: ~"(min-widht:500px)";
 
 .aboutApp {
     margin: 0 auto;
@@ -10,32 +9,27 @@
         padding: 20px;
 
         p {
-            text-align: center;
-            color:@textBlue;
-            font-family: @font-Muli;
-            font-size: 30px;
+            .paragraphStyle(justify);
+
         }
 
         h2 {
-            font-size: 40px;
-            font-family: @font-Muli;
-            font-weight: bolder;
-            text-align: center;
-            color:@textBlue;
+            .headingStyle()
         }
 
 
         .fa {
-            @media @desktop{
+            @media @desktop {
                 margin-left: 65%;
             }
+
             position: absolute;
             margin-top: -43px;
             margin-left: 79%;
             color:@textBlue;
-            
+
         }
-       
+
 
         i:active {
             color: @redOrange;
@@ -54,8 +48,8 @@
             list-style-position: inside;
 
             li {
-                font-family: @font-Muli;
-                font-size: 20px;
+                .paragraphStyle(null);
+    
             }
         }
 
