--- a/less/team.less
+++ b/less/team.less
@@ -1,11 +1,7 @@
 .teamContainer {
     h2 {
-        text-align: center;
-        font-size: 40px;
-        font-family: @font-Muli;
-        font-weight: bolder;
         padding: 25px;
-        color: @textBlue;
+        .headingStyle()
     }
 
     .teamCardsBox {
@@ -15,7 +11,7 @@
         align-content: center;
         justify-content: center;
         padding: 0 15px 15px 0;
-        border-bottom:1px solid #ddd;
+        border-bottom: 1px solid #ddd;
 
 
         .card {
@@ -25,11 +21,12 @@
             justify-content: center;
             margin: 10px;
 
-            @media @desktop  {
+            @media @desktop {
                 border-bottom: 1px dotted #ddd;
                 padding-bottom: 10px;
             }
-            @media @tabletx  {
+
+            @media @tabletx {
                 border-bottom: 1px dotted #ddd;
                 padding-bottom: 10px;
             }
@@ -37,13 +34,14 @@
             .memberPhoto {
                 margin: 0 auto;
                 width: 50%;
-        
-                @media @desktop  {
+
+                @media @desktop {
                     position: relative;
                     margin: 0 20px;
                     width: 100%;
                 }
-                @media @tabletx  {
+
+                @media @tabletx {
                     position: relative;
                     margin: 0 20px;
                     width: 100%;
@@ -66,24 +64,27 @@
 
             .memberInfo {
                 padding: 0 15px;
+
                 h3 {
                     font-size: 20px;
                     font-family: @font-Muli;
                     font-weight: bolder;
                     margin-top: 20px;
-                    margin-bottom:15px;
+                    margin-bottom: 15px;
                     color: @textBlue;
                 }
 
                 p {
-                    font-size: 18px;
-                    font-family: @font-Muli;
-                    color: @darkGray3;
-                    text-align: justify;
+                    // font-size: 18px;
+                    // font-family: @font-Muli;
+                    // color: @darkGray3;
+                    // text-align: justify;
+                    .paragraphStyle(justify);
                 }
 
                 .socialLinks {
-                    margin-top:15px;
+                    margin-top: 15px;
+
                     .fa {
                         font-size: 40px;
                         padding: 5px;
@@ -104,10 +105,10 @@
                 flex-direction: row;
                 // background-color: #FE4909;
             }
-            @media @tabletx { 
+
+            @media @tabletx {
                 text-align: left;
                 flex-direction: row;
-                // background-color: #FE4909;
             }
 
         }
@@ -117,6 +118,7 @@
                 text-align: right;
                 flex-direction: row-reverse;
             }
+
             @media @tabletx {
                 text-align: right;
                 flex-direction: row-reverse;
