--- a/css/index.css
+++ b/css/index.css
@@ -197,19 +197,18 @@ body section {
 footer {
   width: 100%;
   background-color: #E1E6F9;
-  position: absolute;
-  left: 0px;
-  right: 0;
 }
 footer .footer {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: left;
+  align-content: null;
   align-items: center;
   text-align: center;
+  margin-left: 20px;
 }
 footer .footer .copy-right {
-  color: #1f2852;
+  color: #6F789C;
   font-size: 20px;
 }
 footer .footer .fa {
@@ -375,13 +374,13 @@ header .hamburger {
   padding: 20px;
 }
 .aboutApp .aboutTextBox p {
-  text-align: center;
-  color: #2C3A74;
+  font-size: 18px;
   font-family: 'Muli', sans-serif;
-  font-size: 30px;
+  color: #6F789C;
+  text-align: justify;
 }
 .aboutApp .aboutTextBox h2 {
-  font-size: 40px;
+  font-size: 30px;
   font-family: 'Muli', sans-serif;
   font-weight: bolder;
   text-align: center;
@@ -412,8 +411,10 @@ header .hamburger {
   list-style-position: inside;
 }
 .aboutApp .aboutTextBox ul li {
+  font-size: 18px;
   font-family: 'Muli', sans-serif;
-  font-size: 20px;
+  color: #6F789C;
+  text-align: null;
 }
 .aboutApp .appImgs {
   display: flex;
@@ -453,7 +454,7 @@ header .hamburger {
     margin: 5px 20px;
   }
 }
-@media (min-widht:500px) {
+@media (min-width:800px) {
   .aboutApp .appImgs .test .about {
     width: 25%;
   }
@@ -470,11 +471,11 @@ header .hamburger {
   transform: scale(1.1);
 }
 .teamContainer h2 {
-  text-align: center;
-  font-size: 40px;
+  padding: 25px;
+  font-size: 30px;
   font-family: 'Muli', sans-serif;
   font-weight: bolder;
-  padding: 25px;
+  text-align: center;
   color: #2C3A74;
 }
 .teamContainer .teamCardsBox {
