--- a/less/footer.less
+++ b/less/footer.less
@@ -1,19 +1,15 @@
 footer {
     width: 100%;
     background-color:@veryLightGray;
-   
-    position: absolute;
-    left: 0px;
-    right: 0;
 
     .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        .flexDisplay(row, left, null);
         align-items: center;
         text-align: center;
+        margin-left:20px;
+
         .copy-right {
-            color: @darkBlue;
+            color: @darkGray3;
             font-size: 20px;
           }
           .fa {
