--- a/less/home.less
+++ b/less/home.less
@@ -8,21 +8,30 @@
     flex-wrap: wrap;
     flex-direction: column;
 
-        justify-content: center;
+        // justify-content: space-around;
         align-items: center;
 
     h1 {
         color: whitesmoke;
         text-align: left;
         line-height: 1.5;
+        margin-bottom: 100px;
+        padding-top: 150px;
 
         text-shadow: 2px 2px slategray;
-        padding: 250px  50px 80px;
+        // padding: 250px  50px 80px;
 
         @media @desktop {
             font-size: 5rem;
-            width: 50%;
+            width: 42%;
             text-align: left;
+            margin-bottom: 100px;
+            padding-left: 50px;
+            padding-top: 0;
+        }
+
+        @media @tabletx {
+            margin-bottom: 100px;
         }
 
         font-size: 3.5rem;
@@ -35,27 +44,27 @@
     p {
         font-style: oblique;
         color: @textBlue;
-
-
-        @media @desktop {
         font-size: 2.5rem;
-        padding: 0 45px 150px;
-        text-align: left;
-        }
-
-        font-size: 2.5rem;
-        padding: auto;
         text-align: center;
         text-shadow: thistle 1px 1px;
         font-weight: bolder;
+        margin-bottom: 200px;
+
+        @media @desktop {
+        margin-left: 50px;
+        text-align: left;
+        width: 38%;
+        margin-bottom: auto;
+        }
+    }
+
+    #input{
+
     }
 
     @media @desktop {
         align-items: start;
-        justify-content: center;
+        // justify-content: center;
         flex-direction: row;
-
     }
-
-
 }
