--- a/less/about.less
+++ b/less/about.less
@@ -83,7 +83,7 @@
             .about {
 
                 display: inline-block;
-                width: 45%;
+                width: 35%;
                 margin-right: 5px;
 
                 @media @desktop {
@@ -96,7 +96,10 @@
                     width: 25%;
                 }
 
-                img {.imagesAnimations(#E1E6F9, 5%);
+                img {
+                    .imagesAnimations(#E1E6F9, 5%);
+                    width: 100%;
+                    
                 }
 
                 img:hover {
