--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,9 @@
 /*MEDIA Queries*/
 @desktop: ~"(min-width:1000px)";
-@tablet: ~"(min-width:800px)";
-@tabletx: ~"(min-width:800px)";
+@desktopBug: ~"(min-width:1097px)";
+@desktopBugTwo: ~"(min-width:1499px)";
+@tablet: ~"(min-width:600px)";
+@tabletx: ~"(min-width:600px)";
 /*Font*/
 
 @font-Muli: 'Muli', sans-serif;
