--- a/less/footer.less
+++ b/less/footer.less
@@ -7,13 +7,12 @@ footer {
     right: 0;
 
     .footer {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        .flexDisplay(row, left, null);
+        margin-left: 20px;
         align-items: center;
         text-align: center;
         .copy-right {
-            color: @darkBlue;
+            color: @darkGray3;
             font-size: 20px;
           }
           .fa {
