--- a/less/global.less
+++ b/less/global.less
@@ -78,3 +78,8 @@ body {
 .vendor(border-radius, 3px);
 .vendor(box-shadow, 10px 10px);
 }
+.hearSoon{
+  .headingStyle();
+  padding: 40px;
+  background-color: white;
+}
