--- a/less/variables.less
+++ b/less/variables.less
@@ -2,6 +2,7 @@
 @desktop: ~"(min-width:1000px)";
 @desktopBug: ~"(min-width:1097px)";
 @desktopBugTwo: ~"(min-width:1499px)";
+@bugThree: ~'(min-width:1613px)';
 @tablet: ~"(min-width:600px)";
 @tabletx: ~"(min-width:600px)";
 /*Font*/
