--- a/less/footer.less
+++ b/less/footer.less
@@ -6,6 +6,9 @@ footer {
     left: 0px;
     right: 0;
 
+    display: flex;
+    justify-content: center;
+
     .footer {
         .flexDisplay(row, left, null);
         margin-left: 20px;
