--- a/less/home.less
+++ b/less/home.less
@@ -18,7 +18,7 @@
         color: whitesmoke;
         text-align: left;
         line-height: 1.5;
-        margin-bottom: 100px;
+        margin: auto;
         padding-top: 150px;
 
         text-shadow: 2px 2px slategray;
@@ -48,6 +48,7 @@
         text-align: center;
         text-shadow: thistle 1px 1px;
         font-weight: bolder;
+        margin: auto;
 
         @media @desktop {
         text-align: left;
@@ -59,6 +60,7 @@
         font-size: 3rem;
         display: flex;
         flex-direction: column;
+        margin: auto;
 
         @media @desktop {
             margin: 0 auto;
