--- a/less/home.less
+++ b/less/home.less
@@ -5,7 +5,6 @@
     background-size: cover;
 
     display: flex;
-    flex-wrap: wrap;
     flex-direction: column;
 
         align-items: center;
@@ -48,7 +47,7 @@
         text-align: center;
         text-shadow: thistle 1px 1px;
         font-weight: bolder;
-        margin: auto;
+        margin: 50px auto;
 
         @media @desktop {
         text-align: left;
@@ -60,7 +59,7 @@
         font-size: 3rem;
         display: flex;
         flex-direction: column;
-        margin: auto;
+        margin: 0 auto;
 
         @media @desktop {
             margin: 0 auto;
